test/precedence-1.ktn
infix_right 42 ***
def *** (a a -> a): drop
